# RVC3-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
3dfigures/: README.md  fig2_14.gltf  fig2_16.gltf  fig2_16.py  fig2_16a.gltf  fig2_24.py  fig2_4.gltf  fig3_1a.gltf  fig3_1a.py  fig3_1b.py  fig7_13a.gltf  fig7_13a.py  fig7_4a.py  fig7_4c.gltf  fig7_4c.py  fig7_7.gltf  fig7_7.py  fig8_8a.py  fig8_8b.py  fig9_17.gltf  fig9_17.py
RVC3/: __init__.py
chapter10/: chap10.py  fig10_1.py  fig10_10.py  fig10_12.py  fig10_13.py  fig10_15.py  fig10_20.py  fig10_22.py  fig10_23.py  fig10_3.py  fig10_4.py  fig10_5.py  fig10_7.py  fig10_9.py
chapter11/: chap11.py  eg_morph2.py  fig11_11.py  fig11_14.py  fig11_16.py  fig11_17.py  fig11_18.py  fig11_19.py  fig11_20.py  fig11_22.py  fig11_24.py  fig11_25.py  fig11_26.py  fig11_32.py  fig11_35.py  fig11_36.py  fig11_5.py  fig11_7.py  fig11_8.py  morph2.py
chapter12/: box_signeddistance.py  fig12_1.py  fig12_10.py  fig12_11.py  fig12_12.py  fig12_13.py  fig12_14.py  fig12_17.py  fig12_19.py  fig12_20.py  fig12_21.py  fig12_22.py  fig12_24.py  fig12_25.py  fig12_26.py  fig12_28.py  fig12_29.py  fig12_3.py  fig12_31.py  fig12_33.py  fig12_34.py  fig12_38.py  fig12_4.py  fig12_5.py  fig12_6.py  fig12_7.py  fig12_8.py  fig12_9.py  fig12_kmeans.py  left_intrinsics.yml
chapter13/: chap11.py  chap13.py  fig13_11.py  fig13_19.py  fig13_2.py  fig13_23.py  fig13_24.py  fig13_25.py  fig13_26.py  fig13_29.py  fig13_3.py  fig13_5.py  fig13_6.py  fig13_7.py  fig13_8.py
chapter14/: bademo.py  bademo3_SBA.py  chap14.py  fig14_12.py  fig14_13.py  fig14_15.py  fig14_18.py  fig14_28.py  fig14_29.py  fig14_3.py  fig14_31.py  fig14_34.py  fig14_35.py  fig14_38.py  fig14_4.py  fig14_41.py  fig14_44.mat  fig14_45.py  fig14_46.py  fig14_54.py  fig14_6.py  fig14_box_ransac.py  homwarptest.py  jacA.py  jactest.py  simpeaks2.py  test-plucker.py  test6.py  test7.py
chapter2/: chap2.py  fig2_11.py  fig2_12.py  fig2_13.py  fig2_14.py  fig2_15.py  fig2_16.py  fig2_21.py  fig2_22.py  fig2_4-old.py  fig2_4.py  frames.py  screw.py
chapter3/: chap3.py  fig3_14.py  fig3_1a.py  fig3_1b.py  fig3_2.py  fig3_3.py  fig3_4.py  fig3_6.py  fig3_7.py  fig3_8.py  imu_data.py
chapter4/: chap4.py  fig4_12.py  fig4_22.py  fig4_3.py  fig4_5.py  fig4_7.py  fig4_9.py  movepoint.py  rvc4_11.py  rvc4_2.py  rvc4_21.py  rvc4_6.py  rvc4_8.py
chapter5/: chap5.py  dsplanner.py  fig5_10.py  fig5_11.py  fig5_12.py  fig5_13.py  fig5_14.py  fig5_15.py  fig5_16.py  fig5_17.py  fig5_18.py  fig5_19.py  fig5_2.py  fig5_20.py  fig5_28.py  fig5_29.py  fig5_3.py  fig5_30.py  fig5_31.py  fig5_32.py  fig5_33.py  fig5_34.py  fig5_34b.py  fig5_35.py  fig5_4.py  fig5_5.py  fig5_6.py  fig5_7.py  fig5_8.py  fig5_9.py  rvc5_2.py
chapter6/: chap6.py  fig6_11.py  fig6_12.py  fig6_16.py  fig6_20.py  fig6_21.py  fig6_23.py  fig6_3.py  fig6_4.py  fig6_5.py  fig6_7.py  fig6_8.py  fig6_9.py
chapter7/: chap7.py  fig7_11.py  fig7_15.py  fig7_16.py  fig7_3.py  (+9 more)
(+1029 files in other folders)
