[project]
name = "rvc3python"
version = "0.9.2"
authors = [{ name = "Peter Corke", email = "rvc@petercorke.com" }]
description = "Support for book: Robotics, Vision & Control 3 in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "robotics",
    "robot",
    "manipulator",
    "robot arm",
    "mobile robot",
    "mobile manipulation",
    "path planning",
    "SLAM",
    "pose graph",
    "Dubins",
    "Reeds-Shepp",
    "lattice planner",
    "RRT",
    "PRM",
    "rapidly exploring random tree",
    "probabilistic roadmap planner",
    "force control",
    "kinematics",
    "Jacobian",
    "position control",
    "velocity control",
    "spatial math",
    "SO(2)",
    "SE(2)",
    "SO(3)",
    "SE(3)",
    "twist",
    "product of exponential",
    "translation",
    "orientation",
    "angle-axis",
    "Lie group",
    "skew symmetric matrix",
    "pose",
    "translation",
    "rotation matrix",
    "rigid body transform",
    "homogeneous transformation",
    "Euler angles",
    "roll-pitch-yaw angles",
    "quaternion",
    "unit-quaternion",
    "computer vision",
    "machine vision",
    "robotic vision",
    "color space",
    "blackbody",
    "image segmentation",
    "blobs",
    "Hough transform",
    "k-means",
    "homography",
    "camera calibration",
    "visual odometry",
    "bundle adjustment",
    "stereo vision",
    "rectification",
]

dependencies = [
    "matplotlib",
    "numpy < 2",                    # OpenCV and SpatialGeom don't like numpy 2
    "roboticstoolbox-python >= 1",
    "machinevision-toolbox-python",
    "bdsim >= 1.1",
    "IPython",
    "sympy",
    "pybullet",
]

[project.urls]
"Homepage" = "https://github.com/petercorke/RVC3-python"
"Bug Tracker" = "https://github.com/petercorke/RVC3-python/issues"
"Source" = "https://github.com/petercorke/RVC3-python"

[project.optional-dependencies]

pytorch = ["torch", "torchvision"]

[project.scripts]

rvctool = "RVC3.bin.rvctool:main"
bdsim_path = "RVC3.bin.bdsim_path:main"


[build-system]

requires = ["setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]

[tool.setuptools.package-data]
models = ["*.bd"]

[tool.setuptools]

packages = ["RVC3", "RVC3.examples", "RVC3.tools", "RVC3.bin", "RVC3.models"]
